--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,19 @@
 .footer_area{
 	background: #000;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    margin-top: 2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  margin-top: 2rem;
 }
 
 .banner{
-	font-family: "Roboto", sans-serif;
+	font-family: 'Press Start 2P', cursive;
 	font-weight: bold;
 	background: #4682b4;
 	border-radius: 0rem;
 }
 
-.icon{
-    line-height: 25px;
-    width: 25px;
-    background: #e8e8e8;
-    border-radius: 5px;
-    display: inline-block;
-    text-align: center;
-    color: #4682b4;
-    font-size: 16px;
-    margin-left: .3rem;
+.juegos{
+    font-family: "Roboto", sans-serif;
 }
 
 .discord{
@@ -34,6 +26,13 @@
 	color: #4682b4;
 }
 
+.subtitle{
+  padding-left: 0.5rem;
+  padding-top: 0.5rem;
+  background: #000;
+  border: 3px solid white; 
+}
+
 @media (max-width: 992px) {
   .banner { 
     text-align: center;
@@ -42,7 +41,5 @@
   .title{
 
   }
-  .subtitle{
-    
-  }
+
 }
